[gd_scene load_steps=15 format=3 uid="uid://bs45k4rpv0jr8"]

[ext_resource type="Texture2D" uid="uid://bgwynpfkp56s7" path="res://Textures/skamtebord.png" id="1_2ddhg"]
[ext_resource type="Script" path="res://Scenes/Player.gd" id="1_x0uyo"]
[ext_resource type="Texture2D" uid="uid://deoe2woaah1jn" path="res://Textures/jeej.png" id="2_k2qar"]
[ext_resource type="PackedScene" uid="uid://fbywgpksk4j0" path="res://Scenes/Wobbler.tscn" id="3_hj00f"]
[ext_resource type="Texture2D" uid="uid://516qtx2v84mw" path="res://Textures/dust.png" id="5_5h1ls"]
[ext_resource type="AudioStream" uid="uid://b0dqlvcpf2ehl" path="res://Sounds/Grind loop.wav" id="6_1cehh"]
[ext_resource type="AudioStream" uid="uid://d1y4wvntundiw" path="res://Sounds/Rail ollie.wav" id="7_bbpa1"]
[ext_resource type="PackedScene" uid="uid://ylhbmptp2cu8" path="res://Scenes/Tail.tscn" id="8_le377"]

[sub_resource type="CircleShape2D" id="CircleShape2D_42bwv"]
radius = 2.23607

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohqno"]
size = Vector2(16, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pxqh"]
size = Vector2(20, 22)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qfp5y"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yhd7q"]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wupmo"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("7_bbpa1")
stream_0/weight = 1.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -5)
floor_stop_on_slope = false
floor_max_angle = 1.13446
script = ExtResource("1_x0uyo")

[node name="Skamtebord" type="Sprite2D" parent="."]
position = Vector2(-9, -6)
texture = ExtResource("1_2ddhg")
centered = false
hframes = 2

[node name="Jiji" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("2_k2qar")
centered = false
offset = Vector2(-7, -14)

[node name="Wobbler" parent="Jiji" instance=ExtResource("3_hj00f")]
max_angle = 0.3
max_translation = Vector2(2, 2)
max_scale = Vector2(0.2, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_42bwv")

[node name="Board Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ohqno")

[node name="Rail Area2D" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 2
collision_priority = 2.0
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rail Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_6pxqh")

[node name="Pickup Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup Area2D"]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_qfp5y")

[node name="Dust Particles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_yhd7q")
position = Vector2(0, 1)
emitting = false
amount = 7
lifetime = 1.5
fixed_fps = 30
texture = ExtResource("5_5h1ls")
direction = Vector2(-1, 0)
spread = 21.12
gravity = Vector2(0, -50)
initial_velocity_min = 61.22
initial_velocity_max = 102.04
damping_min = 50.0
damping_max = 67.35
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Grind Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1cehh")
bus = &"Grind"

[node name="Grind Bus Timer" type="Timer" parent="."]
autostart = true

[node name="Grind Ollie Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wupmo")
volume_db = 4.727
bus = &"SFX"

[node name="Drop Jump Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2

[node name="Tail" parent="." instance=ExtResource("8_le377")]
position = Vector2(0, -9)
length = 4

[connection signal="area_entered" from="Board Area2D" to="." method="_on_board_area_2d_area_entered"]
[connection signal="body_entered" from="Rail Area2D" to="." method="_on_rail_area_2d_body_entered"]
[connection signal="area_entered" from="Pickup Area2D" to="." method="_on_pickup_area_2d_area_entered"]
[connection signal="area_exited" from="Pickup Area2D" to="." method="_on_pickup_area_2d_area_exited"]
[connection signal="timeout" from="Grind Bus Timer" to="." method="_on_grind_bus_timer_timeout"]
[connection signal="timeout" from="Drop Jump Timer" to="." method="_on_drop_jump_timer_timeout"]
